# qlever-ui

./: pyproject.toml
backend/: views.py
backend/static/js/: helper.js  qleverUI.js
backend/templates/partials/: footer.html
db/: qleverui.sqlite3
qlever/: settings.py
