[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QLever-UI"
version = "0.5.45"
description = "A user-friendly interface for the QLever SPARQL engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.2.12",
    "django-environ==0.13.0",
    "django-import-export==4.4.0",
    "djangorestframework>=3.16.1",
    "gunicorn==25.1.0",
    "pyyaml>=6.0",
    "markdown>=3.9",
    "requests==2.32.5",
    "whitenoise[brotli]==6.12.0",
]

[tool.setuptools.packages.find]
include = ["qlever*", "backend*", "resources*", "formatter*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
